--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,8 @@
   "name": "WhatsBlitz",
   "version": "1.0",
   "description": "Automated WhatsApp messaging extension",
-  "permissions": [
-    "scripting",
-    "storage"
-  ],
-  "host_permissions": [
-    "https://web.whatsapp.com/*"
-  ],
+  "permissions": ["scripting", "storage", "tabs"],
+  "host_permissions": ["https://web.whatsapp.com/*"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -18,13 +13,13 @@
       "128": "icons/icon128.png"
     }
   },
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": ["https://web.whatsapp.com/*"],
       "js": ["content.js"]
     }
-  ],
-  "background": {
-    "service_worker": "background.js"
-  }
+  ]
 }
