--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,25 @@
   "manifest_version": 3,
   "name": "WhatsBlitz",
   "version": "1.0",
-  "description": "Automated WhatsApp messaging extension",
-  "permissions": ["scripting", "storage", "tabs"],
-  "host_permissions": ["https://web.whatsapp.com/*"],
+  "description": "Automated personalized WhatsApp messaging",
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "storage"
+  ],
+  "host_permissions": [
+    "https://web.whatsapp.com/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://web.whatsapp.com/*"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
+    }
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -13,13 +29,9 @@
       "128": "icons/icon128.png"
     }
   },
-  "background": {
-    "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": ["https://web.whatsapp.com/*"],
-      "js": ["content.js"]
-    }
-  ]
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  }
 }
